Converted SdbLoader to Kotlin